--- a/1_HTML/실습문제1.html
+++ b/1_HTML/실습문제1.html
@@ -13,8 +13,8 @@
       할부지 껌딱지<br />
       사는곳, 용인
     </p>
-    <a href="https://www.github.com">Github</a>
-    <a href="https://www.instagram.com">Instagram</a>
+    <a href="https://www.github.com" target="_blank">Github</a>
+    <a href="https://www.instagram.com" target="_blank">Instagram</a>
 
     <h3>Who am I?</h3>
     <p>개발에 관심이 많아 개발자가 되기 위해 할부지 몰래 코딩중입니다.</p>
