--- a/1_HTML/실습문제3.html
+++ b/1_HTML/실습문제3.html
@@ -9,48 +9,61 @@
     <h2>주문하기</h2>
 
     <form action="" name="search_form" method="GET">
-      <label for="userName">고객명 : </label>
-      <input type="userName" name="userName" /> <br /><br />
-      <label for="tel">전화번호 : </label>
-      <input type="tel" name="tel" /> <br /><br />
+      <label for="name">고객명 : </label>
+      <input type="text" id="name" name="name" /> <br /><br />
+      <label for="phone">전화번호 : </label>
+      <input type="tel" id="phone" name="phone" /> <br /><br />
       <label for="e-mail">E-mail : </label>
-      <input type="e-mail" name="e-mail" />
+      <input type="e-mail" id="e-mail" name="e-mail" />
+      <br /><br />
 
       <fieldset>
         <legend>피자 사이즈</legend>
-        <label
-          ><input type="radio" name="size" value="size" /> Small <br /><br
-        /></label>
-        <label><input type="radio" name="size" value="size" /> Medium</label>
+        <input type="radio" id="small" name="size" value="small" />
+        <label for="large">Small</label>
         <br /><br />
-        <label><input type="radio" name="size" value="size" /> Medium</label>
+        <label
+          ><input type="radio" id="medium" name="size" value="medium" />
+          Medium</label
+        >
+        <br /><br />
+        <input type="radio" id="large" name="size" value="large" />
+        <label for="large">Large</label>
       </fieldset>
 
+      <!--(input:checkbox[name="topping"]+label)*4-->
       <fieldset>
         <legend>토핑 선택</legend>
-        <label
-          ><input type="checkbox" name="pizza" value="topping" />
-          베이컨<br /><br
-        /></label>
-        <label
-          ><input type="checkbox" name="pizza" value="topping" /> 치즈<br /><br
-        /></label>
-        <label
-          ><input type="checkbox" name="pizza" value="topping" /> 양파<br /><br
-        /></label>
-        <label
-          ><input type="checkbox" name="pizza" value="topping" /> 버섯<br /><br
-        /></label>
+        <input type="checkbox" name="topping" id="bacon" value="bacon" />
+        <label for="bacon">베이컨</label> <br /><br />
+
+        <input type="checkbox" name="topping" id="cheese" value="cheese" />
+        <label for="cheese">치즈</label> <br /><br />
+
+        <input type="checkbox" name="topping" id="onion" value="onion" />
+        <label for="onion">양파</label> <br /><br />
+
+        <input type="checkbox" name="topping" id="mushroom" value="mushroom" />
+        <label for="mushroom">버섯</label>
       </fieldset>
 
       <label for="time">희망 배송 시간 : </label>
-      <input type="time" id="time" />
+      <input type="time" id="time" name="time" />
 
-      <h4>배송 시 요청사항:</h4>
-      <textarea cols="25" rows="10" placeholder="내용을 입력하세요"></textarea>
       <br /><br />
 
-      <button type="order">주문하기</button>
+      <label for=""> 배송 시 요청사항 : </label> <br /><br />
+      <textarea
+        name="memo"
+        id="memo"
+        cols="25"
+        rows="10"
+        placeholder="내용을 입력하세요"
+        style="resize: none"
+      ></textarea>
+      <br /><br />
+
+      <button type="submit">주문하기</button>
     </form>
   </body>
 </html>
