--- a/02_CSS/css/01_스타일적용.html
+++ b/02_CSS/css/01_스타일적용.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>스타일적용</title>
-    <link rel="stylesheet" href="./css/01_스타일적용.css" />
+    <link rel="stylesheet" href="./01_스타일적용.css" />
     <!-- <style>
         h2 {
             color:red;
