--- a/02_CSS/css/04_텍스트스타일.html
+++ b/02_CSS/css/04_텍스트스타일.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/04_텍스트스타일.css" />
+    <link rel="stylesheet" href="./04_텍스트스타일.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
