--- a/02_CSS/css/06_레이아웃스타일.html
+++ b/02_CSS/css/06_레이아웃스타일.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+dbody<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -83,5 +83,19 @@
     </div>
 
     <div id="fixed"></div>
+
+    <h3>visibility</h3>
+    <p>요소를 화면에 보이거나 보이지 않게 하는 속성</p>
+    <div class="visibility" id="vis1"></div>
+    <div class="visibility" id="vis2"></div>
+
+    <h3>z-index</h3>
+    <p>요소 위에 요소를 쌓을 때 쌓는 순서를 지정하는 속성</p>
+    <div id="z-outer">
+      <!-- (.z-index#z-index$)*3  -->
+      <div class="z-index" id="z-index1"></div>
+      <div class="z-index" id="z-index2"></div>
+      <div class="z-index" id="z-index3"></div>
+    </div>
   </body>
 </html>
