--- a/02_CSS/css/실습문제4.html
+++ b/02_CSS/css/실습문제4.html
@@ -44,14 +44,16 @@
       <section id="display">
         <section id="section2">
           <h1>article</h1>
-          <img src="../resources/media1.jpg" alt="" />
-          <p>Web content 01</p>
-          <img src="../resources/media2.jpg" alt="" />
-          <p>Web content 02</p>
-          <img src="../resources/media3.jpg" alt="" />
-          <p>Web content 03</p>
-          <img src="../resources/media4.jpg" alt="" />
-          <p>Web content 04</p>
+          <div id="moving">
+            <img src="../resources/media1.jpg" alt="" />
+            <p>Web content 01</p>
+            <img src="../resources/media2.jpg" alt="" />
+            <p>Web content 02</p>
+            <img src="../resources/media3.jpg" alt="" />
+            <p>Web content 03</p>
+            <img src="../resources/media4.jpg" alt="" />
+            <p>Web content 04</p>
+          </div>
         </section>
         <section id="section3">
           <h1>aside</h1>
