--- a/02_CSS/css/실습문제4(강사님).html
+++ b/02_CSS/css/실습문제4(강사님).html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/실습문제4(강사님).css" />
   </head>
   <body>
     <header>
       <h1>LOGO</h1>
       <nav>
         <div class="nav-left">
-          <a href=" ">PORTFOLIO</a>
-          <a href=" ">SERVICE</a>
+          <a href="">PORTFOLIO</a>
+          <a href="">SERVICE</a>
         </div>
         <div class="nav-right">
-          <a href=" ">BLOG</a>
-          <a href=" ">ABOUT</a>
+          <a href="">BLOG</a>
+          <a href="">ABOUT</a>
         </div>
       </nav>
     </header>
@@ -33,49 +35,39 @@
       <article>
         <h2>article</h2>
         <div class="article-container">
-          <div class="article-content"></div>
-          <img src="../resources/media1.jpg" alt="" />
-          <p>Web Content 01</p>
-          <div class="article-content"></div>
-          <img src="../resources/media2.jpg" alt="" />
-          <p>Web Content 02</p>
-
-          <div class="article-content"></div>
-          <img src="../resources/media3.jpg" alt="" />
-          <p>Web Content 03</p>
-
-          <div class="article-content"></div>
-          <img src="../resources/media4.jpg" alt="" />
-          <p>Web Content 04</p>
+          <div class="article-content">
+            <img src="../resources/media1.jpg" alt="" />
+            <p>Web Content 01</p>
+          </div>
+          <div class="article-content">
+            <img src="../resources/media2.jpg" alt="" />
+            <p>Web Content 02</p>
+          </div>
+          <div class="article-content">
+            <img src="../resources/media3.jpg" alt="" />
+            <p>Web Content 03</p>
+          </div>
+          <div class="article-content">
+            <img src="../resources/media4.jpg" alt="" />
+            <p>Web Content 04</p>
+          </div>
         </div>
       </article>
       <aside>
         <h2>aside</h2>
         <div class="aside-container">
-          <div class="aside-content"></div>
-          <img src="../resources/media1.jpg" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo
-            corporis velit aliquam eaque, pariatur maxime ducimus officia sequi
-            laudantium, modi tempore odit aperiam nam praesentium blanditiis ut
-            quos architecto ad.
-          </p>
-          <div class="aside-content"></div>
-          <img src="../resources/media1.jpg" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo
-            corporis velit aliquam eaque, pariatur maxime ducimus officia sequi
-            laudantium, modi tempore odit aperiam nam praesentium blanditiis ut
-            quos architecto ad.
-          </p>
-          <div class="aside-content"></div>
-          <img src="../resources/media3.jpg" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            ipsa dolorem dolore temporibus tempora quibusdam earum hic voluptate
-            necessitatibus doloribus, consequuntur obcaecati a. At reprehenderit
-            quasi quo beatae ab explicabo.
-          </p>
+          <div class="aside-content">
+            <img src="../resources/media1.jpg" alt="" />
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="aside-content">
+            <img src="../resources/media2.jpg" alt="" />
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="aside-content">
+            <img src="../resources/media3.jpg" alt="" />
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
         </div>
       </aside>
     </section>
