--- a/02_CSS/css/실습문제4.html
+++ b/02_CSS/css/실습문제4.html
@@ -57,27 +57,29 @@
         </section>
         <section id="section3">
           <h1>aside</h1>
-          <img src="../resources/media1.jpg" alt="" />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
-            iure accusantium possimus error aperiam magni fugit reprehenderit
-            debitis incidunt, est sit doloremque, perspiciatis cumque sed
-            perferendis, facere consequuntur eius?
-          </p>
-          <img src="../resources/media2.jpg" alt="" />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
-            iure accusantium possimus error aperiam magni fugit reprehenderit
-            debitis incidunt, est sit doloremque, perspiciatis cumque sed
-            perferendis, facere consequuntur eius?
-          </p>
-          <img src="../resources/media3.jpg" alt="" />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
-            iure accusantium possimus error aperiam magni fugit reprehenderit
-            debitis incidunt, est sit doloremque, perspiciatis cumque sed
-            perferendis, facere consequuntur eius?
-          </p>
+          <div id="aside-move">
+            <img src="../resources/media1.jpg" alt="" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
+              iure accusantium possimus error aperiam magni fugit reprehenderit
+              debitis incidunt, est sit doloremque, perspiciatis cumque sed
+              perferendis, facere consequuntur eius?
+            </p>
+            <img src="../resources/media2.jpg" alt="" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
+              iure accusantium possimus error aperiam magni fugit reprehenderit
+              debitis incidunt, est sit doloremque, perspiciatis cumque sed
+              perferendis, facere consequuntur eius?
+            </p>
+            <img src="../resources/media3.jpg" alt="" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ab
+              iure accusantium possimus error aperiam magni fugit reprehenderit
+              debitis incidunt, est sit doloremque, perspiciatis cumque sed
+              perferendis, facere consequuntur eius?
+            </p>
+          </div>
         </section>
       </section>
     </main>
