--- a/3_JavaScript/basic/실습문제2.html
+++ b/3_JavaScript/basic/실습문제2.html
@@ -13,7 +13,7 @@
      -->
     <script>
       const id = prompt("아이디를 입력하세요");
-      if (id == "admin") {
+      if (id === "admin") {
         console.log("관리자입니다.");
       } else {
         console.log("관리자가 아닙니다.");
@@ -24,8 +24,9 @@
             합격 조건을 만족하였을 때 '합격', 만족하지 않으면 '불합격'을 console에 출력하시오.
       -->
     <script>
-      const score = prompt("점수 입력");
-      if ((score) => 80) {
+      const score1 = prompt("필기 시험 점수 입력");
+      const score2 = prompt("실기 시험 점수 입력");
+      if (score1 >= 80 && score2 >= 80) {
         console.log("합격");
       } else {
         console.log("불합격");
@@ -51,7 +52,7 @@
     <script>
       const age = prompt("나이 입력");
 
-      if ((age) => 65 || age < 8) {
+      if (age >= 65 || age < 8) {
         console.log("입장료는 무료입니다");
       } else {
         console.log("입장료는 10,000원입니다.");
@@ -73,6 +74,56 @@
         console.log("가을입니다");
       } else {
         console.log("겨울입니다");
+      }
+    </script>
+    <script>
+      let season2;
+      prompt("월 입력하세요");
+
+      // if -> 중첩 가능 !
+      // 가급적으로 사실 중첩 쓰지 않는 것을 추천
+      if (1 <= month && month <= 12) {
+        if (3 <= month && month <= 5) {
+          season2 = "봄";
+        } else if (6 <= month && month <= 8) {
+          season2 = "여름";
+        } else if (9 <= month && month <= 11) {
+          season2 = "가을";
+        } else {
+          season2 = "겨울";
+        }
+        console.log("${month}월은 ${season2}입니다. ");
+      }
+
+      console.log(typeof month);
+      // switch
+      switch (month) {
+        case 3:
+        case 4:
+        case 5:
+          console.log("들어옴!");
+          season = "봄";
+          break;
+        case 6:
+        case 7:
+        case 8:
+          season = "여름";
+          break;
+        case 9:
+        case 10:
+        case 11:
+          season = "가을";
+          break;
+        case 12:
+        case 1:
+        case 2:
+          season = "겨울";
+          break;
+        default:
+          console.log("월을 잘못 입력하셨습니다 ~");
+      }
+      {
+        console.log("${month}월은 ${season2}입니다.");
       }
     </script>
   </body>
