--- a/3_JavaScript/basic/03_배열.html
+++ b/3_JavaScript/basic/03_배열.html
@@ -50,10 +50,52 @@
       arr.sort(); // 작은 숫자부터 큰 숫자로 정렬
       //  문자 정렬은 그대로 사용 ! 숫자 정렬이 문제
       arr.sort((a, b) => a - b); // 얘는 함수에서 나옵니다 ! (뒤에서 ~~)
-      console.log(arr);
+      console.log(arr.toString());
 
       arr.reverse(); // 거꾸로 정렬
       console.log(arr);
+    </script>
+
+    <!-- 배열과 문자열 -->
+    <script>
+      // 문자열 -> 배열 : split(구분자);
+      const strArr = "Hello, JavaScript!".split(","); // , 를 기준으로 앞뒤로 쪼개짐
+      console.log(strArr);
+
+      // 배열 -> 문자열 : join(구분자);
+      const str = strArr.join(""); // 쪼개진 배열이 문자열로 합쳐짐
+      console.log(str);
+    </script>
+
+    <!-- 배열은 보통 빈 배열에서 시작 -->
+    <script>
+      const arr2 = [];
+      arr2.push(1);
+      arr2.push(3);
+      arr2[2] = 5;
+      arr2[1] = 7;
+      console.log(arr2);
+    </script>
+
+    <!-- slice (시작 인덱스, 끝 인덱스) -->
+    <script>
+      const numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
+      const result = numbers.slice(3, 7);
+      console.log(numbers.toString());
+      console.log(result); // 3, 4, 5, 6 (7까지 아님)
+    </script>
+
+    <!-- 
+      * 구조 분해 할당
+        : 프로그래밍 언어에서 여러 값을 동시에 여러 변수에 할당하는 기술
+     -->
+    <script>
+      const character = ["짱구", "유리", "철수", "훈이", "맹구"];
+      // 기존 방법 : '유리' 가져올때
+      console.log(character[1]);
+      // 새로 생긴 방식
+      const [a, b, c, d, e] = character; // 하나씩 하나씩 대응돼서 출력
+      console.log(b);
     </script>
   </body>
 </html>
