--- a/3_JavaScript/basic/04_반복문.html
+++ b/3_JavaScript/basic/04_반복문.html
@@ -35,9 +35,86 @@
 
       // 초기값 : 어떤 숫자부터
       // 조건식 : 어떤 숫자까지
-      for (let i = 1; i <= 10; i += 3) {
+      for (let i = 1; i <= 10; i++) {
         console.log(i);
       }
+
+      //    for (let i = 1; i<= 10; i += 3){
+      //     console.log(i); }  // 1,4,7,10
+    </script>
+
+    <script>
+      const movies = [
+        "서울의 봄",
+        "3일의 휴가",
+        "나폴레옹",
+        "괴물",
+        "싱글 인 서울",
+      ];
+
+      // 영화 제목을 하나씩 출력해보세요
+      //   console.log(movies[0]);
+      //   console.log(movies[1]);
+      //   console.log(movies[2]);
+      //   console.log(movies[3]);
+      //   console.log(movies[4]);
+
+      //   for (let i = 0; i <= 4; i++) {
+      //     console.log(movies[i]);
+      //   }
+
+      //   for (let i = 0; i <= movies.length - 1; i++) {
+      //     console.log(movies[i]);
+      //   }
+
+      for (let i = 0; i < movies.length; i++) {
+        console.log(movies[i]);
+      }
+    </script>
+
+    <!-- for in 
+        for (const 인덱스 in 배열) {} 
+    -->
+    <script>
+      for (const index in movies) {
+        console.log(index);
+        console.log(movies[index]);
+      }
+    </script>
+
+    <!-- for of 
+        for(const 값 of 배열) {}
+    -->
+    <script>
+      // value 값을 뽑는다
+      for (const value of movies) {
+        console.log(value);
+      }
+    </script>
+
+    <!--
+         while (조건) {
+            조건이 true면 계속 반복
+            }  
+    -->
+
+    <!-- for (let i = 0; i < movies.length; i++) {
+        console.log(i);
+        console.log(movies[i]);
+      } -->
+    <script>
+      let i = 0;
+      while (i < movies.length) {
+        console.log(movies[i]);
+        i++;
+      }
+    </script>
+
+    <!-- 무한루프 -->
+    <script>
+      //   while (true) {
+      //     // 조건을 걸어서 조건에 해당되면 안에서 STOP!
+      //   }
     </script>
   </body>
 </html>
