--- a/3_JavaScript/basic/실습문제3.html
+++ b/3_JavaScript/basic/실습문제3.html
@@ -56,7 +56,7 @@
     <!-- Q4. 해당 배열을 오름차순(작은 숫자 ~ 큰 숫자)으로 정렬해주세요  -->
     <script>
       const numbers = [7, -24, -8, 10, 17, -58];
-      numbers.sort();
+      numbers.sort((a, b) => a - b);
       console.log(numbers);
     </script>
   </body>
