--- a/3_JavaScript/basic/03_배열.html
+++ b/3_JavaScript/basic/03_배열.html
@@ -74,7 +74,7 @@
       arr2.push(3);
       arr2[2] = 5;
       arr2[1] = 7;
-      console.log(arr2);
+      console.log(arr2.toString());
     </script>
 
     <!-- slice (시작 인덱스, 끝 인덱스) -->
