--- a/3_JavaScript/basic/04_반복문.html
+++ b/3_JavaScript/basic/04_반복문.html
@@ -143,15 +143,15 @@
         console.log(number);
       }
 
-      //   for (let number = 1; number <= 10; number++) {
-      //     if (number === 8) {
-      //       break;
-      //     }
-      //     if (number % 2 == 0) {
-      //       continue;
-      //     }
-      //     console.log(number);
-      //   }
+      for (let number = 1; number <= 10; number++) {
+        if (number === 8) {
+          break;
+        }
+        if (number % 2 == 0) {
+          continue;
+        }
+        console.log(number);
+      }
 
       // if (number > 10) {
       //   break;
