--- a/3_JavaScript/basic/03_배열.html
+++ b/3_JavaScript/basic/03_배열.html
@@ -60,7 +60,7 @@
     <script>
       // 문자열 -> 배열 : split(구분자);
       const strArr = "Hello, JavaScript!".split(","); // , 를 기준으로 앞뒤로 쪼개짐
-      console.log(strArr);
+      console.log(strArr.toString());
 
       // 배열 -> 문자열 : join(구분자);
       const str = strArr.join(""); // 쪼개진 배열이 문자열로 합쳐짐
