--- a/3_JavaScript/basic/실습문제4(강사님).html
+++ b/3_JavaScript/basic/실습문제4(강사님).html
@@ -8,98 +8,110 @@
   <body>
     <!-- Q1. 100 ~ 200 정수 중 5의 배수가 아닌 수를 출력하세요 -->
     <script>
-      let number = 100;
-      while (true) {
-        number++;
-        if (number == 200) break;
-        if (number % 5 == 0) continue;
-        console.log(number);
-      }
-
-      let s = 100;
-      for (s = 100; s <= 200; s++) {
-        if (s % 5 == 0) {
-          continue;
-        } else {
-          console.log(s);
+      for (let i = 100; i <= 200; i++) {
+        if (i % 5 !== 0) {
+          console.log(i);
         }
       }
     </script>
 
     <!-- Q2. 1 ~ 1000 정수 중 3의 배수의 합계를 출력하세요 -->
     <script>
+      console.log("--------Q2------");
       let sum = 0;
       for (i = 1; i <= 1000; i++) {
-        if (i % 3 == 0);
-        {
+        if (i % 3 === 0) {
           sum += i;
         }
       }
-
-      console.log(sum);
+      console.log("합계 : " + sum);
     </script>
 
     <!-- Q3. 문자열의 문자들을 하나씩 출력하세요 -->
     <script>
-      const str = "안녕하세요. 반갑습니다!".split("");
-      console.log(str);
+      console.log("------ Q3 -------");
+      const str = "안녕하세요. 반갑습니다!";
+      //   str[0]
+      //   str[1]
+      //   str[2]
+      //   .
+      //   .
+
+      //**(1번)**
+      for (let i = 0; i < str.length; i++) {
+        console.log(str[i]);
+      }
+      //(2번)
+      for (const i in str) {
+        console.log(str[i]);
+      }
+      //(3번)
+      for (const i of str) {
+        console.log(i);
+      }
+
+      //**(4번)**
+      let i = 0;
+      while (i < str.length) {
+        console.log(str[i]);
+        i++;
+      }
     </script>
+
     <!-- Q4. 배열 값 중 최대값을 출력하세요 -->
     <script>
+      //(1번)
+      console.log("-------Q4-------");
       const nums = [3, 7, 12, 5, 3];
       nums.sort((a, b) => a - b);
-      console.log(nums[4]);
+      console.log(nums[nums.length - 1]);
+
+      //(2번)
+      let max = nums[0];
+      for (let num of nums) {
+        if (max < num) {
+          max = num;
+        }
+        console.log(`최대값 : ${max}`); // max : 3, num : 3
+        // max : 3, num : 7 -> max < num : max : 7
+        // max : 7, num : 12 -> max : 12
+        // max : 12, num : 5 -> max : 12
+        // max : 12, num : 3 -> max : 12
+      }
     </script>
     ​
-    <!-- Q5. 1 ~ 100 정수 중 소수를 출력하세요 -->
+    <!-- Q5. 1 ~ 100 정수 중 소수(1과 자기자신)를 출력하세요 -->
+
+    <!-- EX ) 1~10 
+        2, 3, 5, 7 -->
     <script>
-      let sosu = 100;
-      while (true) {
-        sosu++;
-        if (sosu % 2 == 0) break;
-        if (sosu % 2 == 1) continue;
-        console.log(sosu);
+      console.log("------Q5-------");
+      for (let i = 2; i <= 10; i++) {
+        for (let j = 2; j <= i; j++) {
+          if (i % j === 0 && i !== j) {
+            break;
+          } else if (i % j === 0 && i === j) {
+            console.log(i);
+          }
+        }
       }
     </script>
     ​
     <!-- Q6. 배열 안의 데이터를 모두 2배로 만들어서 출력하세요 -->
     <script>
       const nums2 = [1, 3, 5];
-      console.log(2 * nums2[0]);
-      console.log(2 * nums2[1]);
-      console.log(2 * nums2[2]);
-      for (i = 0; i <= 2; i++) {
-        console.log(2 * nums2[i]);
-      }
     </script>
     ​
     <!-- Q7. 배열에 있는 데이터들로 합계와 평균을 출력하세요 -->
     <script>
       const nums3 = [90, 85, 70, 86, 97];
-      // 합계
-      let sum2 = 0;
-      for (let i = 0; i < nums3.length; i++) {
-        sum2 += nums3[i];
-      }
-      console.log(sum2);
-
-      // 평균
-      let pung = sum2 / 5;
-      console.log(pung);
     </script>
     ​
     <!-- Q8. 두 배열의 각 데이터의 곱셈을 한 데이터들로 이루어진 새로운 배열을 생성하여 출력하세요 -->
     <script>
       const a1 = [12, 0, 2, 5, 4];
       const b1 = [5, 15, 6, 7, 8];
-      const c1 = [];
-
-      for (i = 0; i <= a1.length - 1; i++) {
-        c1.push(a1[i] * b1[i]);
-      }
-      console.log(c1.toString());
     </script>
-
     ​
     <!-- Q9. 두 배열의 데이터 값이 서로 같은 데이터들만 이루어진 새로운 배열을 생성하여 출력하세요
             배열.includes(데이터) : 해당 데이터가 배열에 있으면 true, 없으면 false
@@ -107,11 +119,6 @@
     <script>
       const a2 = [12, 0, 2, 5, 4];
       const b2 = [0, 2, 3, 12, 8];
-      const c2 = [];
-      for (i = 0; i <= a2.length - 1; i++) {
-        c2.push((a2[i] = b2[i]));
-      }
-      console.log(c2.toString());
     </script>
     ​
     <!-- Q10. 2차원 배열에는 3명의 학생의 4과목 성적이 들어 있습니다. 각 학생들의 합계와 평균을 출력하세요 -->
@@ -121,8 +128,6 @@
         [87, 93, 62, 83],
         [98, 90, 77, 97],
       ];
-
-      // 합계
     </script>
   </body>
 </html>
