--- a/3_JavaScript/basic/실습문제4.html
+++ b/3_JavaScript/basic/실습문제4.html
@@ -64,13 +64,33 @@
     ​
     <!-- Q6. 배열 안의 데이터를 모두 2배로 만들어서 출력하세요 -->
     <script>
-      const nums2 = [1, 3, 5];
-      console.log(2 * nums2[0]);
-      console.log(2 * nums2[1]);
-      console.log(2 * nums2[2]);
-      for (i = 0; i <= 2; i++) {
-        console.log(2 * nums2[i]);
+      // const nums2 = [1, 3, 5];
+      // console.log(2 * nums2[0]);
+      // console.log(2 * nums2[1]);
+      // console.log(2 * nums2[2]);
+      // for (i = 0; i <= 2; i++) {
+      //   console.log(2 * nums2[i]);
+
+      // }
+
+      //1번
+      for (let i = 0; i < nums2.length; i++) {
+        console.log(nums2[i] * 2);
       }
+      //2번
+      nums2.forEach((num) => {
+        console.log(num * 2);
+      });
+
+      //3번
+      // const nums4 = nums2.map((num) => {
+      //   return num * 2;
+      // });
+      // console.log(nums4);
+
+      //4번
+      const nums4 = nums2.map((num) => num * 2);
+      console.log(nums4);
     </script>
     ​
     <!-- Q7. 배열에 있는 데이터들로 합계와 평균을 출력하세요 -->
@@ -92,12 +112,12 @@
     <script>
       const a1 = [12, 0, 2, 5, 4];
       const b1 = [5, 15, 6, 7, 8];
-      const c1 = [];
 
-      for (i = 0; i <= a1.length - 1; i++) {
-        c1.push(a1[i] * b1[i]);
-      }
-      console.log(c1.toString());
+      // const c1 = [];
+      // for (i = 0; i <= a1.length - 1; i++) {
+      //   c1.push(a1[i] * b1[i]);
+      // }
+      // console.log(c1.toString());
     </script>
 
     ​
