--- a/3_JavaScript/basic/실습문제4.html
+++ b/3_JavaScript/basic/실습문제4.html
@@ -95,23 +95,49 @@
     ​
     <!-- Q7. 배열에 있는 데이터들로 합계와 평균을 출력하세요 -->
     <script>
+      console.log("------Q7-------");
       const nums3 = [90, 85, 70, 86, 97];
-      // 합계
-      let sum2 = 0;
-      for (let i = 0; i < nums3.length; i++) {
-        sum2 += nums3[i];
-      }
-      console.log(sum2);
+      // // 합계
+      // let sum2 = 0;
+      // for (let i = 0; i < nums3.length; i++) {
+      //   sum2 += nums3[i];
+      // }
+      // console.log(sum2);
 
-      // 평균
-      let pung = sum2 / 5;
-      console.log(pung);
+      // // 평균
+      // let pung = sum2 / 5;
+      // console.log(pung);
+
+      // 1번
+      let sum2 = 0;
+      for (index in nums3) {
+        console.log(nums3[index]);
+        sum2 += nums3[index];
+      }
+
+      console.log(`합계 : ${sum2}, 평균 : ${sum2 / nums3.length}`);
+
+      // 2번 accumulator -> ac
+      const num3 = nums3.reduce((ac, num) => ac + num);
+      console.log(`합계 : ${sum3}`);
     </script>
     ​
     <!-- Q8. 두 배열의 각 데이터의 곱셈을 한 데이터들로 이루어진 새로운 배열을 생성하여 출력하세요 -->
     <script>
+      console.log("----------Q8-----------");
       const a1 = [12, 0, 2, 5, 4];
       const b1 = [5, 15, 6, 7, 8];
+
+      let c1 = [];
+      for (i in a1) {
+        c1.push(a1[i] * b1[i]);
+      }
+      console.log(c1);
+      c1 = [];
+      a1.forEach((value, index) => {
+        c1.push(value * b1[index]);
+      });
+      console.log(c1);
 
       // const c1 = [];
       // for (i = 0; i <= a1.length - 1; i++) {
@@ -125,13 +151,17 @@
             배열.includes(데이터) : 해당 데이터가 배열에 있으면 true, 없으면 false
     -->
     <script>
+      console.log("------Q9---------");
       const a2 = [12, 0, 2, 5, 4];
       const b2 = [0, 2, 3, 12, 8];
       const c2 = [];
-      for (i = 0; i <= a2.length - 1; i++) {
-        c2.push((a2[i] = b2[i]));
-      }
-      console.log(c2.toString());
+      a2.forEach((value) => {
+        // console.log(value, b2.includes(value));
+        if (b2.includes(value)) {
+          c2.push(value);
+        }
+      });
+      console.log(c2);
     </script>
     ​
     <!-- Q10. 2차원 배열에는 3명의 학생의 4과목 성적이 들어 있습니다. 각 학생들의 합계와 평균을 출력하세요 -->
