--- a/3_JavaScript/basic/실습문제6.html
+++ b/3_JavaScript/basic/실습문제6.html
@@ -71,11 +71,10 @@
 
     <!-- Q5. 프로토타입을 이용하여 발매일(date)를 추가하여 해당 실행 결과와 같이 나오도록 구현하세요 -->
     <script>
-      music.prototype.date = function () {
-        console.log("2023.10.27");
-      };
+      music1.prototype.date = "2023.10.27";
+      console.log(music.date);
 
-      console.log(music.date); // 2023.10.27
+      // 2023.10.27
     </script>
   </body>
 </html>
