--- a/1_HTML/실습문제1.html
+++ b/1_HTML/실습문제1.html
@@ -6,7 +6,7 @@
     <title>실습문제1.html</title>
   </head>
   <body>
-    <img src="../resources/pubao.jpg" alt="" width="220" height="170" />
+    <img src="../02_CSS/resources/pubao.jpg" alt="" width="220" height="170" />
 
     <h3>푸바오</h3>
     <p>
