--- a/연습!/ㅂㅂㅁ.html
+++ b/연습!/ㅂㅂㅁ.html
@@ -87,6 +87,27 @@
         console.log(number);
         i++;
     }
+    while(true){
+        console.log(number++);
+        if(number>10){
+            break;
+        }
+    }
+
+    
+
+        </script>
+
+        <script>
+            //1~10까지 홀수만 출력
+
+            let number2 = 0;
+            while(true){
+                number ++;
+                if(number==10) break;
+                if(number%2==0) continue; 
+                console.log(number2);
+            }
 
         </script>
 
