--- a/3_JavaScript/basic/실습문제6.html
+++ b/3_JavaScript/basic/실습문제6.html
@@ -14,12 +14,39 @@
              price / 11340
     -->
     <script>
+      // 생성자 함수를 사용한다면 ?
+      function Book(title, author, publisher, price) {
+        this.title = title;
+        this.author = author;
+        this.publisher = publisher;
+        this.price = price;
+      }
+      const b1 = new Book("하는 일마다 잘되리라", "전승환", "북로망스", 11340);
+
+      // 클래스
+
+      class Book2 {
+        constructor(title, author, publisher, price) {
+          this.title = title;
+          this.author = author;
+          this.publisher = publisher;
+          this.price = price;
+        }
+      }
+      const b2 = new Book2("하는 일마다 잘되리라", "전승환", "북로망스", 11340);
+
+      ////////////////////////////////
+
       const book = {
         title: "하는 일마다 잘되리라",
         author: "전승환",
         publisher: "북로망스",
-        price: "11340",
+        price: 11340,
       };
+
+      console.log(b1);
+      console.log(b2);
+      console.log(book);
     </script>
 
     <!-- Q2. 책 제목(title)과 저자(author)를 출력하세요. -->
@@ -32,13 +59,15 @@
             예) 하는 일마다 잘되리라의 가격은 11340원 입니다.
       -->
     <script>
-      //   book.showprice = 11340;
+      // Tip : 가급적으로 함수 내에서 직접 출력 금지 !
+      // console.log 테스트 용도로만 !!
 
       book.showPrice = function () {
-        console.log(`${this.title}의 가격은 ${this.price}입니다.`);
+        return `${this.title}의 가격은 ${this.price}원 입니다.`;
       };
 
-      book.showPrice(); // 38번 -> 하는 일마다 잘되리라의 가격은 11340원입니다.
+      console.log(book.showPrice()); // 38번 -> 하는 일마다 잘되리라의 가격은 11340원입니다.
+      document.write(book.showPrcie());
     </script>
 
     <!-- Q4. 생성자 함수나 클래스를 이용하여 new Music("Perfect Night", "르세라핌")을 생성 후
@@ -46,16 +75,17 @@
                
       -->
     <script>
-      // function Person(name, age) {
-      //     this.name = name;
-      //     this.age = age;
-      //     this.hello = function () {
-      //       console.log(`안녕? 나는 ${this.name}이고, 나이는 ${this.age}살!`);
-      //     };
+      class Music {
+        constructor(title, singer) {
+          this.title = title;
+          this.singer = singer;
+        }
+      }
+      // desc() {
+      //   return `${this.singer}의 곡 '${this.title}' 발표!`;{
+      //     const music = new Music("Perfect Night");
       //   }
-      //   const p1 = new Person("도경수", 15);
-      //   console.log(p1); // Person {name: '도경수', age: 15, hello: ƒ}
-      //   p1.hello(); // 75번줄에 출력 -> 안녕? 나는 도경수이고, 나이는 15살!
+      // } console.log(music.desc());
 
       function music1(name, title) {
         this.name = name;
@@ -64,9 +94,9 @@
           return `${this.name}의 곡 '${this.title}' 발표 !`;
         };
       }
-      const music = new music1("르세라핌", "Perfect Night");
+      const music2 = new music1("르세라핌", "Perfect Night");
 
-      console.log(music.desc()); // 르세라핌의 곡 'Perfect Night' 발표!
+      console.log(music2.desc()); // 르세라핌의 곡 'Perfect Night' 발표!
     </script>
 
     <!-- Q5. 프로토타입을 이용하여 발매일(date)를 추가하여 해당 실행 결과와 같이 나오도록 구현하세요 -->
@@ -75,6 +105,33 @@
       console.log(music.date);
 
       // 2023.10.27
+    </script>
+
+    <!-- 구조 분해 할당 -> 객체  -->
+
+    <script>
+      const { title, author, publisher, price } = book;
+      console.log(title);
+      console.log(author);
+      console.log(publisher);
+      console.log(price);
+    </script>
+
+    <!-- 키워드 파라미터 -->
+    <script>
+      // 얘는 그냥 구조 분해 할당을 매개변수에서 바로 사용 !
+      // 객체에서 사용하는 구조 분해 할당 (얘는 사용하기 편리하다)
+      function read({ titel, author, publisher, price }) {
+        // console.log(data);
+        return `${title}을 읽는다`;
+      }
+      console.log(read(book));
+
+      // 여기부터 키워드 파라미터 (별로 안 써요)
+      function write(author = "테스트", title = "TEST") {
+        return `${author}가 ${title}을 쓰다`;
+      }
+      console.log(write({ author: "정회영", title: "오늘 오후에는 오신대요" }));
     </script>
   </body>
 </html>
