--- a/3_JavaScript/object/03_DOM.html
+++ b/3_JavaScript/object/03_DOM.html
@@ -56,6 +56,12 @@
     <button onclick="btn11()">contains</button>
     <button onclick="btn12()">toggle</button>
 
+    <h2>문서 객체 추가하기</h2>
+    <button onclick="btn13()">실행 확인</button>
+
+    <h2>문서 객체 삭제하기</h2>
+    <button onclick="btn14()">실행 확인</button>
+
     <script src="js/03_DOM.js"></script>
   </body>
 </html>
