--- a/3_JavaScript/object/실습문제1(강사님).html
+++ b/3_JavaScript/object/실습문제1(강사님).html
@@ -26,7 +26,6 @@
     </style>
   </head>
   <body>
-    <script src="./js/실습문제1.js"></script>
     <h2>문제 1. HTML 태그에 접근</h2>
     <p>텍스트 박스로 입력받은 데이터를 가져와서 출력하기</p>
     ​
@@ -54,14 +53,7 @@
     <div id="result1"></div>
     ​
     <script>
-      function printValue() {
-        const result1 = document.querySelector("#result1");
-        const customer = document.querySelector("#customer").value;
-        const product = document.querySelector("#product").value;
-        const price = document.querySelector("#price").value;
-
-        result1.innerHTML = `${customer}님의 구매 상품은 ${product}, 구매 가격은 ${price}원 입니다.`;
-      }
+      function printValue() {}
     </script>
     ​
     <hr />
@@ -77,21 +69,24 @@
         id="text1"
       />
     </fieldset>
-
+    ​
     <br />
-
+    ​
     <div id="result2"></div>
     ​
     <br />
-
+    ​
     <button onclick="stringLength();">확인하기</button>
-
+    ​
     <script>
       function stringLength() {
-        const result2 = document.querySelector("#result2");
-        const text1 = document.querySelector("#text1").value;
+        const text = document.querySelector("#text1");
+        const result = document.querySelector("#result2");
 
-        result2.innerHTML = `보기의 문자열 길이는 ${text1.length}입니다`;
+        // console.log(text.value.length);
+        // console.log(result);
+
+        result.innerHTML = `보기의 문자열 길이는 ${text.value.length}글자입니다.`;
       }
     </script>
     ​
@@ -117,10 +112,34 @@
     ​
     <script>
       function stringSplit() {
-        const result3 = document.querySelector("#result3");
-        const la1 = document.querySelector("#la1");
-        console.log(la1.innerHTML.split(","));
-        result3.innerHTML = ` ${la1.split(",")}`;
+        const label = document.querySelector("#la1");
+        const result = document.querySelector("#result3");
+
+        // * ol & li로 푼 방법
+        //     const ol = document.createElement("ol");
+        //     const li = document.createElement("li");
+
+        const arr = label.innerHTML.split(",");
+
+        //     for (let data of arr) {
+        //       const li = document.createElement("li");
+        //       li.innerHTML = data;
+        //       ol.appendChild(li);
+        //     }
+        //     result.appendChild(ol);
+        //   }
+
+        // * index로 푼 방법
+
+        // for(let i = 0; i < arr.length; i++){
+
+        // }
+
+        for (let i in arr) {
+          //   console.log(typeof i);
+          //   console.log();
+          result.innerHTML += `${Number(i) + 1}. ${arr[i]} <br>`;
+        }
       }
     </script>
     ​
@@ -132,7 +151,7 @@
       다음 보기의 문자열을 바탕으로 삭제할 음식과 추가할 음식을 입력받아서
       지우고, 추가하는 코드를 작성하여라. (단, 1개씩 입력)<br />
       <br />
-      예시 삭제 : 당근 / 추가 : 타코야끼 <br />
+      예시) 삭제 : 당근 / 추가 : 타코야끼 <br />
       결과-> 피자 치킨 햄버거 떡볶이 타코야끼 <br />
     </p>
     ​
@@ -161,10 +180,27 @@
     <button onclick="arrayTest();">처리 및 출력</button>
 
     <script>
-      function arrayTest() {}
+      function arrayTest() {
+        const preview = document.querySelector("#preview");
+        const remove = document.querySelector("#remove");
+        const add = document.querySelector("#add");
+        const result = document.querySelector("#result4");
+
+        const arr = preview.innerHTML.split(" ");
+        // 배열에서 인덱스 찾기
+        const index = arr.indexOf(remove.value);
+        // console.log(index);
+
+        // 배열에서 삭제
+        arr.splice(index, 1);
+
+        // 배열에서 추가
+        arr.push(add.value);
+
+        result.innerHTML = arr.join(" ");
+      }
     </script>
-    <!-- ​
-    부모객체(자식객체.parentNode).removeChild(자식객체) -->
+    ​
     <hr />
     ​
     <h2>문제 5. 학생 정보 테이블에 입력하기</h2>
