--- a/3_JavaScript/object/01_내장객체.html
+++ b/3_JavaScript/object/01_내장객체.html
@@ -34,7 +34,7 @@
     <h3>현재 날짜와 시간</h3>
     <button onclick="btn4()">실행 확인</button>
 
-    <h3>]특정 날짜로 설정</h3>
-    <button onclick="btn5()" 실행 확인></button>
+    <h3>특정 날짜로 설정</h3>
+    <button onclick="btn5()">실행 확인</button>
   </body>
 </html>
