--- a/3_JavaScript/object/실습문제1(강사님).html
+++ b/3_JavaScript/object/실습문제1(강사님).html
@@ -53,7 +53,14 @@
     <div id="result1"></div>
     ​
     <script>
-      function printValue() {}
+      function printValue() {
+        const result1 = document.querySelector("#result1");
+        const customer = document.querySelector("#customer").value;
+        const product = document.querySelector("#product").value;
+        const price = document.querySelector("#price").value;
+
+        result1.innerHTML = `${customer}님의 구매 상품은 ${product}, 구매 가격은 ${price}원 입니다.`;
+      }
     </script>
     ​
     <hr />
@@ -181,10 +188,10 @@
 
     <script>
       function arrayTest() {
-        const preview = document.querySelector("#preview");
-        const remove = document.querySelector("#remove");
-        const add = document.querySelector("#add");
-        const result = document.querySelector("#result4");
+        // const preview = document.querySelector("#preview");
+        // const remove = document.querySelector("#remove");
+        // const add = document.querySelector("#add");
+        // const result = document.querySelector("#result4");
 
         const arr = preview.innerHTML.split(" ");
         // 배열에서 인덱스 찾기
@@ -197,7 +204,7 @@
         // 배열에서 추가
         arr.push(add.value);
 
-        result.innerHTML = arr.join(" ");
+        result4.innerHTML = arr.join(" ");
       }
     </script>
     ​
@@ -237,7 +244,32 @@
     </div>
     ​
     <script>
-      function addStudent() {}
+      function Student(name, age, addr) {
+        this.name = name;
+        this.age = age;
+        this.addr = addr;
+      }
+      function addStudent() {
+        // 입력
+        const arr = [];
+        for (let i = 0; i < 3; i++) {
+          const name = prompt(`${i + 1}번째 학생 이름 입력`);
+          const age = prompt(`${i + 1}번째 학생 나이 입력`);
+          const addr = prompt(`${i + 1}번째 학생 주소 입력`);
+          const student = new Student(name, age, addr);
+          arr.push(student);
+        }
+        // 출력
+        const names = document.querySelectorAll(".name");
+        const ages = document.querySelectorAll(".age");
+        const addrs = document.querySelectorAll(".addr");
+
+        for (let i = 0; i < 3; i++) {
+          names[i].innerHTML = arr[i].name;
+          ages[i].innerHTML = arr[i].age;
+          addrs[i].innerHTML = arr[i].addr;
+        }
+      }
     </script>
     ​
   </body>
