--- a/3_JavaScript/object/실습문제33.html
+++ b/3_JavaScript/object/실습문제33.html
@@ -16,19 +16,17 @@
       </h3>
     </div>
 
-    <div class="container">
+    <div class="images">
       <img src="../../02_CSS/resources/spy1.jpg" alt="" />
       <img src="../../02_CSS/resources/spy2.jpg" alt="" />
       <img src="../../02_CSS/resources/spy3.jpg" alt="" />
     </div>
 
-    <div id="bton">
-      <button onclick="btn1()">click</button>
-      <button onclick="btn2()">restart</button>
+    <div id="buttons">
+      <button id="click">Click <span></span></button>
+      <button id="restart">Restart</button>
     </div>
 
-    <div id="p2">
-      <h3>Congratulation!! Press restart to play again~~!!</h3>
-    </div>
+    <p id="result"></p>
   </body>
 </html>
