--- a/3_JavaScript/object/실습문제3-2.html
+++ b/3_JavaScript/object/실습문제3-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../../02_CSS/css/실습문제33.css" />
+    <link rel="stylesheet" href=../css/ />
   </head>
   <body>
     <div id="title">
@@ -29,6 +29,6 @@
 
     <p id="result"></p>
 
-    <script src="./js/실습문제33.js"></script>
+    <script src="js/실습문제3-2.js"></script>
   </body>
 </html>
