--- a/3_JavaScript/object/05_정규표현식.html
+++ b/3_JavaScript/object/05_정규표현식.html
@@ -97,12 +97,17 @@
     <script>
       const str7 = "A1 B2 C3 d_4 e:5 ` ffgg77--__--`\t가\n나\n다";
       area7.innerHTML += `/\d/g : ${str7.replace(/\d/g, "($&)")} <br>`;
-      // [0-9]/g와 결과가 같다
+      // [0-9]/g와 결과가 같다 A(1) B(2) C(3) d_(4) e:(5) 'ffgg(7)(7)--__--' 가 나 다
       area7.innerHTML += `/\D/g : ${str7.replace(/\D/g, "($&)")} <br>`;
+      //(A)1( )(B)2( )(C)3( )(d)(_)4( )(e)(:)5( )(`)( )(f)(f)(g)(g)77(-)(-)(_)(_)(-)(-)(`)( )(가)( )(나)( )(다)
       area7.innerHTML += `/\w/g : ${str7.replace(/\w/g, "($&)")} <br>`;
+      // (A)(1) (B)(2) (C)(3) (d)(_)(4) (e):(5) ` (f)(f)(g)(g)(7)(7)--(_)(_)--` 가 나 다
       area7.innerHTML += `/\W/g : ${str7.replace(/\W/g, "($&)")} <br>`;
+      // A1( )B2( )C3( )d_4( )e(:)5( )(`)( )ffgg77(-)(-)__(-)(-)(`)( )(가)( )(나)( )(다)
       area7.innerHTML += `/\s/g : ${str7.replace(/\s/g, "($&)")} <br>`;
+      //  A1( )B2( )C3( )d_4( )e:5( )`( )ffgg77--__--`( )가( )나( )다
       area7.innerHTML += `/\S/g : ${str7.replace(/\S/g, "($&)")} <br>`;
+      //  (A)(1) (B)(2) (C)(3) (d)(_)(4) (e)(:)(5) (`) (f)(f)(g)(g)(7)(7)(-)(-)(_)(_)(-)(-)(`) (가) (나) (다)
     </script>
 
     <h2>연습</h2>
