--- a/3_JavaScript/object/실습문제3-2.html
+++ b/3_JavaScript/object/실습문제3-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href=../css/ />
+    <link rel="stylesheet" href="실습문제3-2.css" />
   </head>
   <body>
     <div id="title">
