--- a/3_JavaScript/object/실습문제04.html
+++ b/3_JavaScript/object/실습문제04.html
@@ -4,10 +4,95 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90vh;
+      }
+      form {
+        border: 1px solid #ccc;
+        padding: 8px;
+      }
+      form div {
+        margin-bottom: 10px;
+      }
+      form span {
+        display: block;
+        color: #999;
+        margin-left: 12px;
+      }
+    </style>
     <link rel="stylesheet" href="./실습문제04.css" />
   </head>
   <body>
-    <h3>* 아이디 :</h3>
+    <form action="">
+      <div>
+        <label for="userId">* 아이디 : </label>
+        <input type="text" id="userId" name="userId" />
+        <span
+          >첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총 4~12자로
+          입력하시오.</span
+        >
+      </div>
+      <div>
+        <label for="userPwd">* 비밀번호 : </label>
+        <input type="password" id="userPwd" name="userPwd" />
+        <span>영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.</span>
+      </div>
+      <div>
+        <label for="userPwdCheck">* 비밀번호 확인 : </label>
+        <input type="password" id="userPwdCheck" />
+        <span>위의 비밀번호와 일치하게 입력하시오</span>
+      </div>
+      <div>
+        <label for="userName">* 이름 : </label>
+        <input type="text" id="userName" name="userName" />
+        <span>한글로만 이루어져야되며 2글자 이상으로 입력하시오.</span>
+      </div>
+      <div>
+        <label for="email">* 이메일 : </label>
+        <input type="text" id="email" name="email" />
+        <span>이메일 형식에 맞춰서 입력하시오.</span>
+      </div>
+      <div>
+        <label for="hobby">* 취미 : </label>
+        <input
+          type="text"
+          id="hobby"
+          name="hobby"
+          placeholder="축구, 농구, 야구, 독서 등"
+        />
+      </div>
+      <div>
+        <label for="addr">* 거주지 : </label>
+        <select name="addr" id="addr">
+          <option value="seoul">서울</option>
+          <option value="gyeonggi">경기</option>
+          <option value="incheon">인천</option>
+        </select>
+      </div>
+      <button type="submit">회원가입</button>
+      <button type="reset">취소</button>
+    </form>
+    <script>
+      const userIdResult = document.querySelector("#userId + span");
+      userId.addEventListener("input", function (e) {
+        // console.log(e);
+        // console.log(e.target.value);
+        console.log(userId.value);
+        // 첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총 4~12자로 입력하시오.
+        const regExp = /^[a-zA-Z][a-zA-Z0-9]{3,11}$/;
+        if (regExp.test(userId.value)) {
+          userIdResult.style.color = "green";
+        } else {
+          userIdResult.style.color = "red";
+        }
+      });
+    </script>
+
+    <!-- <h3>* 아이디 :</h3>
     <div id="area1">
       <input type="text" id="id" />
       <p>
@@ -58,7 +143,7 @@
     <br /><br />
 
     <button>회원가입</button>
-    <button>취소</button>
+    <button>취소</button> -->
 
     <script src="./js/실습문제04.js"></script>
   </body>
