--- a/3_JavaScript/basic/04_반복문.html
+++ b/3_JavaScript/basic/04_반복문.html
@@ -88,7 +88,7 @@
     <script>
       // value 값을 뽑는다
       for (const value of movies) {
-        console.log(value);
+        console.log(value);    // 서울의 봄 / 3일의 휴가/ 나폴레옹/ 괴물/ 싱글 인 서울
       }
     </script>
 
