--- a/coupang/index.html
+++ b/coupang/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쿠팡!</title>
-    <link rel="shortcut icon" href="../02_CSS/resources/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="https://image9.coupangcdn.com/image/coupang/favicon/v2/favicon.ico"
+    />
     <!-- 2. reset.css 추가 -->
     <link rel="stylesheet" href="./reset.css" />
 
@@ -18,7 +21,7 @@
     ></script>
   </head>
   <body>
-    <!-- 1.HTML 작성 -->
+    <!-- 1. HTML 작성 -->
     <div class="tob-bar container">
       <div class="tob-bar-left">
         <a href="#">즐겨찾기</a>
@@ -104,8 +107,8 @@
               src="https://image6.coupangcdn.com/image/coupang/common/logoBizonlyBrown.png"
               alt=""
             />
+            <span>쿠팡비즈</span>
           </a>
-          <span>쿠팡비즈</span>
           <a href="#">
             <img
               src="https://image6.coupangcdn.com/image/coupang/home/icons/Overseas.png"
@@ -134,10 +137,10 @@
               src="https://image9.coupangcdn.com/image/coupang/common/icon_government_promotion.png"
               alt=""
             />
-            <span>착한상점 기획전</span>
+            <span>착한상점</span>
           </a>
           <a href="#">
-            <span></span>
+            <span>기획전</span>
           </a>
           <a href="#">
             <img
