--- a/coupang/index.html
+++ b/coupang/index.html
@@ -40,6 +40,123 @@
         <i class="fa-solid fa-bars"></i>
         <p>카테고리</p>
       </div>
+      <!-- 숨겨져있는 카테고리 -->
+      <div class="category">
+        <div class="category-list">
+          <div class="category-item">
+            <i class="fa-solid fa-shirt"></i>
+            <span>패션의류/잡화</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-pump-soap"></i>
+            <span>뷰티</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-baby"></i>
+            <span>출산/유아동</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-bowl-food"></i>
+            <span>식품</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-mug-saucer"></i>
+            <span>주방용품</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-bottle-droplet"></i>
+            <span>생활용품</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-couch"></i>
+            <span>홈인테리어</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-camera"></i>
+            <span>가전디지털</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-baseball"></i>
+            <span>스포츠/레저</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="category-item">
+            <i class="fa-solid fa-car"></i>
+            <span>자동차용품</span>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+        </div>
+        <div class="category-sub">
+          <div class="category-sub-item">
+            <img
+              src="https://image8.coupangcdn.com/image/displayitem/displayitem_3cc22bda-73a2-4f9b-a7ea-c12d205adcb3.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image9.coupangcdn.com/image/displayitem/displayitem_66b57433-c633-44e2-ad4a-e334e2779ab3.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image7.coupangcdn.com/image/displayitem/displayitem_177b1f26-409b-4799-a6f6-1468c45fcdcc.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image7.coupangcdn.com/image/displayitem/displayitem_96ace47f-0079-4436-9cf0-25a43ac75517.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image6.coupangcdn.com/image/displayitem/displayitem_2049fac1-63d9-441c-ba0a-26a95ca5ee71.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image6.coupangcdn.com/image/displayitem/displayitem_5c29f78b-865f-4303-bc84-b811633fab36.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image9.coupangcdn.com/image/displayitem/displayitem_2af06d7f-e016-419e-8fcb-059898000ee2.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image7.coupangcdn.com/image/displayitem/displayitem_1682114d-db45-4371-8aee-b1d6f69523dc.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image7.coupangcdn.com/image/displayitem/displayitem_632d731b-b306-4e0a-b3fb-1ee5bf06f380.jpg"
+              alt=""
+            />
+          </div>
+          <div class="category-sub-item">
+            <img
+              src="https://image7.coupangcdn.com/image/displayitem/displayitem_33eefe3e-deb8-45f3-b1f9-e9a01815c3f7.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
       <div class="header-main">
         <div class="header-main-top">
           <a href="#" class="logo">
