--- a/coupang/index.html
+++ b/coupang/index.html
@@ -383,6 +383,29 @@
           alt=""
       /></a>
     </section>
+
+    <section class="category-best container">
+      <h2>
+        <span>HOT! TREND</span>
+        카테고리별 <span>추천 광고상품</span>
+      </h2>
+      <div class="category-menu"></div>
+      <a href=""><i class="fa-solid fa-shirt"></i></a>
+      <a href=""><i class="fa-solid fa-pump-soap"></i></a>
+      <a href=""><i class="fa-solid fa-baby"></i></a>
+      <a href=""><i class="fa-solid fa-bowl-food"></i></a>
+      <a href=""><i class="fa-solid fa-mug-saucer"></i></a>
+      <a href=""><i class="fa-solid fa-bottle-droplet"></i></a>
+      <a href=""><i class="fa-solid fa-couch"></i></a>
+      <a href=""><i class="fa-solid fa-camera"></i></a>
+      <a href=""><i class="fa-solid fa-baseball"></i></a>
+      <a href=""><i class="fa-solid fa-car"></i></a>
+      <div class="category-best-items"></div>
+      <div class="category-best-items"></div>
+      <div class="category-best-items"></div>
+      <div class="category-best-items"></div>
+      <div class="category-best-items"></div>
+    </section>
     <script src="./script.js"></script>
   </body>
 </html>
