--- a/3_JavaScript/object/실습문제04.html
+++ b/3_JavaScript/object/실습문제04.html
@@ -123,7 +123,7 @@
       userPwd.addEventListener("input", function (e) {
         inputHandler(
           e,
-          userIdCheck1(),
+          userPwdCheck1(),
           "영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오."
         );
       });
@@ -170,7 +170,6 @@
       }
     </script>
 
-  
     <script src="./js/실습문제04.js"></script>
   </body>
 </html>
